--- a/game task/style.css
+++ b/game task/style.css
@@ -2,12 +2,17 @@
         padding: 0;
         margin: 0;
 }
+
+body {
+   background-color: rgba(0 , 0, 0, 0.3);
+}
 #wrapper {
         width: 600px;
         height: 300px;
-        background: #999;
+        background-image: url(img/space.png);
         position: relative;
         margin: 20px auto;
+        border: 5px solid grey;
 }
 
 #target {
@@ -18,11 +23,12 @@
 }
 
 #ship {
-        width: 10px;
-        height: 20px;
-        position: absolute;
-        background-color: #000;
-        bottom: 0;
+      width: 10px;
+      height: 20px;
+      position: absolute;
+      background-image: url(img/rocket.png);
+      background-position: center;
+      bottom: 0;
 }
 
 .bul {
@@ -34,7 +40,9 @@
 
 #stats {
    position: absolute;
-   left: -50px;
+   left: -100px;
+   border: 5px groove yellow;
+   padding: 10px;
 }
 
 .lastBul {
